--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,8 @@
 #Grails Metadata file
-#Sat Jun 18 10:40:01 CEST 2011
-app.grails.version=1.3.7
+#Thu Dec 01 21:18:46 CET 2011
+app.grails.version=2.0.0.RC3
 app.name=example
 app.servlet.version=2.4
 app.version=0.1
+plugins.hibernate=2.0.0.RC3
+plugins.tomcat=2.0.0.RC3
