--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,11 @@
 #Grails Metadata file
 #Sat Dec 03 13:46:32 CET 2011
-app.grails.version=2.0.0.RC3
+app.grails.version=2.0.0
 app.name=example
 app.servlet.version=2.5
 app.version=0.1
-plugins.hibernate=2.0.0.RC3
+plugins.hibernate=2.0.0
 plugins.jquery=1.7
 plugins.resources=1.1.2
-plugins.tomcat=2.0.0.RC3
+plugins.tomcat=2.0.0
 plugins.webxml=1.3.1
